tests/NormalTests/paczka1/small_fuzzy/31563459.err
Error in line 6: xXX4VC A784 93,7
Error in line 4: SpgJevHOZTS A784 32,9
Error in line 10: Kpatcs S856 50,9
